--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,6 @@ description:           >
 # A shorter description for the sidebar.
 tagline:               >
           Test Engineer
-          Published Author
 
 # A list of keywords for your blog
 keywords: [
@@ -61,12 +60,12 @@ author:
   email:             15701577807@163.com
   picture:           /assets/icons/icon-512x512.png
   social:
-    linkedin:        christian-haller
-    github:          ChristianHallerX
-    researchgate:    Christian_Haller4
-    email:           mail@christianhaller.me
+    linkedin:        -
+    github:          YinuoWang-CS
+    researchgate:    -
+    email:           15701577807@163.com
     cv:              https://docs.google.com/document/d/1CDO0WQcwpnmia_fosRdELAl8MzRlk_RM6tQMCr5ra50/edit?usp=sharing
-    calendly:        christian_haller/30-min-call-on-google-meet
+    calendly:        -
 
 # Add links to the sidebar.
 menu:
@@ -74,8 +73,8 @@ menu:
     url:               /projectblog/
   - title:             About
     url:               /about/
-  - title:             Publications
-    url:               /publications/
+#  - title:             Publications
+#    url:               /publications/
   - title:             Academic Interests
     url:               /academic/
   - title:             Photography
