--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,34 +2,34 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              Christian Haller, Ph.D.
-  email:             mail@christianhaller.me
+  name:              Yinuo Wang
+  email:             15701577807@163.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Christian holds a Ph.D. in `Marine Science`, an M.Sc. in `Geoscience`, and has a strong computer programming background.
-    He has a proficiency in one of the hottest subjects of our time: `Data Science`, and developing `Machine Learning` models.
+    Wang Yinuo holds a bachelor's degree in Teaching Chinese to Speakers of Other Languages in 2019 from Beijing Language and Culture University. 
+    She has a strong interest in Computer Science and began a journey of self-study in this field.
     [See more...](/about/)
 
   # This photo will be used in the about section
   picture:
-    path:            https://ChristianHallerX.github.io/assets/icons/icon-192x192.png
+    path:            https://YinuoWang-CS.github.io/assets/icons/icon-192x192.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            https://ChristianHallerX.github.io/assets/icons/icon-384x384.png
-      2x:            https://ChristianHallerX.github.io/assets/icons/icon-512x512.png
+      1x:            https://YinuoWang-CS.github.io/assets/icons/icon-384x384.png
+      2x:            https://YinuoWang-CS.github.io/assets/icons/icon-512x512.png
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    linkedin:        christian-haller
-    calendly:        christian_haller/30-min-call-on-google-meet
-    email:           mail@christianhaller.me
-    github:          ChristianHallerX
-    google-scholar:  4xJhLhYAAAAJ&hl
-    researchgate:    Christian_Haller4
+    linkedin:        -
+    calendly:        -
+    email:           15701577807@163.com
+    github:          YinuoWang-CS
+    google-scholar:  -
+    researchgate:    -
     #cv:              https://docs.google.com/document/d/1CDO0WQcwpnmia_fosRdELAl8MzRlk_RM6tQMCr5ra50/edit?usp=sharing
 
     # resume:          /resume/
