--- a/_config.yml
+++ b/_config.yml
@@ -60,12 +60,12 @@ author:
   email:             15701577807@163.com
   picture:           /assets/icons/icon-512x512.png
   social:
-    linkedin:        -
+    linkedin:        YinuoWang
     github:          YinuoWang-CS
-    researchgate:    -
+    researchgate:    YinuoWang
     email:           15701577807@163.com
     cv:              https://docs.google.com/document/d/1CDO0WQcwpnmia_fosRdELAl8MzRlk_RM6tQMCr5ra50/edit?usp=sharing
-    calendly:        -
+    calendly:        YinuoWang
 
 # Add links to the sidebar.
 menu:
