--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,12 +24,12 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    linkedin:        -
-    calendly:        -
+    linkedin:        YinuoWang
+    calendly:        YinuoWang
     email:           15701577807@163.com
     github:          YinuoWang-CS
-    google-scholar:  -
-    researchgate:    -
+    google-scholar:  YinuoWang
+    researchgate:    YinuoWang
     #cv:              https://docs.google.com/document/d/1CDO0WQcwpnmia_fosRdELAl8MzRlk_RM6tQMCr5ra50/edit?usp=sharing
 
     # resume:          /resume/
